syntax = "proto3";
package content;

import "hopeio/utils/patch/go.proto";
import "hopeio/time/time.proto";
import "hopeio/time/deletedAt/deletedAt.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "user/user.model.proto";
import "common/common.model.proto";
import "content/action.model.proto";
import "content/content.model.proto";

option java_package = "xyz.hoper.protobuf.content";
option java_multiple_files = true;
option go_package = "github.com/liov/hoper/server/go/protobuf/content";

message Article{
  uint64 id = 1 [(go.field) = {tags:'gorm:"primaryKey"'}];
  string title = 24 [(go.field) = {tags:'gorm:"size:50" comment:"标题"'}];
  string intro = 25 [(go.field) = {tags:'gorm:"size:100" comment:"介绍"'}];
  string abstract = 26 [(go.field) = {tags:'gorm:"size:100" comment:"摘要"'}];
  string content = 2 [(go.field) = {tags:'gorm:"text;not null" comment:"内容"'}];
  uint32 contentType = 27 [(go.field) = {tags:'gorm:"type:int2;default:0" comment:"文本类型"'}];
  common.TinyTag mood = 4 [(go.field) = {tags:'gorm:"-" comment:"心情"'}];
  common.TinyTag weather = 21 [(go.field) = {tags:'gorm:"-" comment:"天气"'}];
  common.Area area = 19 [(go.field) = {tags:'gorm:"-" comment:"地区"'}];
  uint64 areaId = 20 [(go.field) = {tags:'gorm:"size:10;default:0" comment:"地区"'}];
  string location = 14 [(go.field) = {tags:'gorm:"size:20" comment:"位置"'}];
  repeated common.Tag tags = 6 [(go.field) = {tags:'gorm:"-" comment:"标签"'}];
  user.UserBase user = 8 [(go.field) = {tags:'gorm:"-" comment:"用户"'}];
  uint64 userId = 17 [(go.field) = {tags:'gorm:"size:20;default:0;index" comment:"用户id"'}];
  repeated user.UserBase approveUsers = 9 [(go.field) = {tags:'gorm:"-" comment:"点赞用户"'}];
  repeated user.UserBase collectUsers = 10 [(go.field) = {tags:'gorm:"-" comment:"收藏用户"'}];
  repeated user.UserBase likeUsers = 11 [(go.field) = {tags:'gorm:"-" comment:"喜欢用户"'}];
  repeated Comment comments = 7 [(go.field) = {tags:'gorm:"-" comment:"评论"'}];
  uint32 sequence = 12 [(go.field) = {tags:'gorm:"type:int2;default:0" comment:"同级别的分类可根据sequence的值来排序，置顶"'}];
  uint32 anonymous = 15 [(go.field) = {tags:'gorm:"type:int2;default:0" comment:"是否匿名,0-是,1否"'}];
  ViewPermission permission = 13 [(go.field) = {tags:'gorm:"type:int2;default:0" comment:"查看权限"'}];
  time.Time createdAt = 16 [(go.field) = {tags:'gorm:"type:timestamptz(6);default:now();index"'}];
  deletedAt.DeletedAt deletedAt = 28 [(go.field) = {tags:'gorm:"<-:false;type:timestamptz(6);index"'}];
  uint32 status = 18 [(go.field) = {tags:'gorm:"type:int2;default:0"'}, (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    read_only:true
  }];
}
